--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,56 @@
+// plugins {
+//     id 'org.springframework.boot' version '3.1.0'  // Remove -SNAPSHOT
+//     id 'io.spring.dependency-management' version '1.1.0'
+//     id 'java'
+// }
+
+// group 'com.example'
+// version '1.0-SNAPSHOT'
+
+// sourceCompatibility = 17
+
+// repositories {
+//     mavenCentral()
+//     maven { url 'https://repo.spring.io/milestone' }
+//     maven { url 'https://repo.spring.io/snapshot' }
+// }
+
+// dependencies {
+//     implementation 'org.springframework.boot:spring-boot-starter-web'
+//     implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.3'
+//     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
+//     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+//     implementation "javax.annotation:javax.annotation-api:1.3.2"
+// }
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.0-SNAPSHOT'
-    id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '3.1.5'
+    id 'io.spring.dependency-management' version '1.1.4'  // Updated version
 }
 
 group 'com.example'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 17
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+}
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
-    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.3'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
-    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-    implementation "javax.annotation:javax.annotation-api:1.3.2"
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'  // Updated version
+    implementation 'com.mysql:mysql-connector-j:8.1.0'  // Updated MySQL connector
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'  // Added Spring Boot test starter
+    testImplementation 'junit:junit:4.13.2'
+    
+    // Jakarta annotations for Spring Boot 3.x
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+}
+
+// Optional: Configure test task
+tasks.named('test') {
+    useJUnitPlatform()
 }
